--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^16.0.0",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.555.0",
-    "next": "^15.5.6",
+    "next": "15.5.9",
     "next-cloudinary": "^6.17.5",
     "prisma": "^5.0.0",
     "react": "^18.0.0",
