--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-cloudinary": "^6.17.5",
     "prisma": "^5.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
